Fix share layout on mobile

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ header .mainLogo {
 }
 
 header .mainLogoXks {
-
   background: #555;
   margin-right: 10px;
   float: right;
@@ -159,6 +158,7 @@ a.button:active {
   text-shadow: 1px 1px 1px #b0b0b0;
   margin-top: 20px;
   margin-left: 16px;
+  z-index: 10;
 }
 
 .tagNew {
@@ -221,6 +221,12 @@ a.button:active {
   #share {
     margin-top: 27px;
     margin-bottom: 17px;
+    width: 100%;
+  }
+
+  header .mainLogoXks {
+    width: 108px;
+    height: 63px;
   }
 
   #content div {
